# maxmaksum1

./: README.md  androidx.compose.material.icons.Icons  androidx.compose.material.icons.filled.CameraAlt  androidx.compose.material3.*  androidx.compose.ui.Alignment  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.example.crashcourse.db.AppDatabase/: 2.json  3.json
app/schemas/com.example.crashcourse.db.AppDatabase.AppDatabase/: 1.json
app/src/androidTest/java/com/example/crashcourse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face_recognizer.cpp  face_recognizer.h  image_processor.c  image_processor.cpp  image_processor.h  jni_bridge.cpp
app/src/main/java/com/example/crashcourse/: MainActivity.kt
app/src/main/java/com/example/crashcourse/audio/: TTSManager.kt
app/src/main/java/com/example/crashcourse/config/: FaceConfig.kt
app/src/main/java/com/example/crashcourse/data/: PhotoRepository.kt
app/src/main/java/com/example/crashcourse/db/: AppDatabase.kt  CheckInRecord.kt  CheckInRecordDao.kt  Converters.kt  DropdownDao.kt  DropdownEntities.kt  FaceCache.kt  FaceDao.kt  FaceEntity.kt
app/src/main/java/com/example/crashcourse/domain/: BulkRegisterUseCase.kt  CheckInPolicy.kt  DeleteFaceUseCase.kt  FaceDuplicateDetector.kt  FaceRecognitionUseCase.kt  GreetingProvider.kt  RegisterFaceResult.kt  RegisterFaceUseCase.kt  (+2 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/crashcourse/: ExampleUnitTest.kt
debug/: evaluate_model.py
(+87 files in other folders)
